[gd_scene load_steps=4 format=3 uid="uid://rmiyddqx7xt0"]

[ext_resource type="Script" uid="uid://daova6qhremfu" path="res://Scripts/Ui/loading_screen.gd" id="1_2c40f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3bw"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)

[sub_resource type="LabelSettings" id="LabelSettings_uxkad"]
font_size = 28

[node name="LoadingScreen" type="Control"]
z_index = 2
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2c40f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dp3bw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = "Loading"

[node name="LevelNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Level Name"
label_settings = SubResource("LabelSettings_uxkad")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
rounded = true
